proj/dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-deployment
  namespace: amit-microservices
spec:
  replicas: 3
  selector:
    matchLabels:
      app: microservice
  template:
    metadata:
      labels:
        app: microservice
    spec:
      serviceAccountName: microservice-sa
      containers:
        - name: microservice
          image: amitow/nginx:v1
          ports:
            - containerPort: 80
