proj/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: amit-microservice-service
  namespace: amit-microservices
spec:
  selector:
    app: microservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
